Fix CORS: allow Origin header for GitHub Pages